--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <!-- ALL SLIDES GO HERE -->
       <!-- Each section element contains an individual slide -->
       <section>
-        <h1>BI Report</h1>
-        <p>Analizando una sesion de gameplay en TCK desde el punto de vista de las mecanicas "Anti-fun".</p>
+        <h1>BI - Report: </h1>
+        <p>Analizando gameplay en TCK desde el punto de vista de las mecanicas "Anti-fun".</p>
       </section>
 
       <section id="show-a-link">
         <h1>Mecanicas Anti-Fun</h1>
-        <p>Anti-fun (o Game Design Anti-Patterns) es un concepto del mundo del Game Design para describir mecanicas de gameplay que funcionan correctamente de acuerdo al spec pero una vez implementadas generan mas descontento y enojo que diversion y placer.</p>
+        <p>Anti-fun mechanics (o Game Design Anti-Patterns) es un concepto del mundo del Game Design para describir mecanicas de gameplay que funcionan correctamente de acuerdo al spec pero una vez implementadas generan mas descontento y enojo que diversion y placer.</p>
         <p> Esto a su vez causa un loop de feedback emocional negativo y el posterior efecto conocido como "tilting" en el mundo del poker:<br>
         [...] => enojo => desconcentracion => mala eleccion => enojo => [...]</p>
       </section>
@@ -35,25 +35,199 @@
         <h1>Mecanicas Anti-Fun</h1>
         <p>El concepto se popularizo a partir de una discusion abierta entre Zileas (VP de Game Design de Riot Games) y la comunidad del LoL.</p>
         <p>Zileas mantiene una <a href="http://forums.na.leagueoflegends.com/board/showthread.php?t=293417">lista actualizada</a> describiendo varios tipos de estas mecanicas, muchas de las cuales no nos competen por el tipo de juego.</p>
-        <p>Vamos a obsvervar el flow de una sesion de gameplay de TCK teniendo en cuenta tres de ellas en particular.</p>
+        <p>Vamos a enfocarnos en ciertos aspectos de gameplay de TCK teniendo en cuenta algunas de estas mecanicas.</p>
+        <p>Veamos primero las mecanicas que nos competen...</p>
       </section>
       <section>
-        <h1>Mecanicas Anti-Fun: False or Ineffective Choice</h1>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h1>False choice: Deceptive Wrong Choice</h1>
+        <p>"...when you present the player with one or more choices that appear to be valid, but one of the choices is just flat wrong."</p>
+        <p>Presentar al usuario lo que aparenta ser una eleccion valida, pero en la cual una de las opciones es incorrecta o simplemente inutil en el contexto.</p>
+        <p><br></p>
+        <h1>False choice: Ineffective Choice</h1>
         <p>"...when you give what appears to be an interesting choice that is then completely unrewarding, or ineffective at the promised action."</p>
-        <p>Mostrar al usuario lo que a priori parece una eleccion interesante, pero luego resulta completamente inefectiva o simplemente no gratificante.</p>
+        <p>Mostrar al usuario lo que a priori parece una eleccion interesante, pero luego resulta completamente inefectiva, intrascendente o simplemente no gratificante.</p>
       </section>
 
       <section>
-        <h1>Mecanicas Anti-Fun: Non-Reliability</h1>
-        <p>How does one revisit an arbitrary slide in code?</p>
-        <p>Visit internal slide<a href="#/show-a-link"> 2</a>
-      </section>
-
-      <section>
-        <h1>Mecanicas Anti-Fun: Non-Reliability</h1>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h1>Non-Reliability</h1>
         <p>"Skills are tools. Players count on them to do a job. ..."</p>
-        <p>Cuando le damos una herramienta al usuario con un fin determinado, y luego resulta que esa herramienta no logra satisfacer el rol prometido o solo lo logra en determinadas situaciones .</p>
+        <p>Cuando le damos una herramienta al usuario con un fin determinado, y luego resulta que esa herramienta no logra satisfacer el rol prometido o solo lo logra en determinadas situaciones. Le damos una herramienta en la que no puede confiar.</p>
       </section>
+
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h1>Fun Fails to Exceed Anti-Fun</h1>
+        <p>"..the negative experience your opponents feel when you do something (they have no control over) that prevents them from 'playing their game', doing activities they consider fun, or even answering back."</p>
+        <p>Cuando la experiencia negativa generada por las acciones (unilaterales o no) del adversario es superior a la experiencia positiva genereda por las acciones propias.</p>
+        <p>El ejemplo mas clasico de esta situacion es el de un adversario realizando una accion sobre la cual no podemos intervenir o siquieria responder, y la sensacion de impotencia e injusticia que eso conlleva.</p>
+      </section>
+
+
+      <section>
+        <h1>Here we go !</h1>
+      </section>
+
+      <!-- FALSE CHOICE: DECEPTIVE WRONG CHOICE -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>False choice: Deceptive Wrong Choice</h3>
+        <p class="smalltext">Presentar al usuario lo que aparenta ser una eleccion valida, pero en la cual una de las opciones es incorrecta o simplemente inutil en el contexto.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-37-57.png">
+        <div class="img_cap wide">
+          <p style="margin-top: 0px;">Prob de elegir (ciegamente) la opcion correcta:</p>
+          <p><strong>Bomb:</strong> <span class="green">50%</span> </p>
+          <p><strong>Double chance:</strong> <br>25% primer intento,<br> 33% segundo intento; <br> => <span class="red">33%</span> como maximo</p>
+
+          <p>Si no sabemos nada de la pregunta ni sospechamos cual respuesta puede ser la correcta, <strong>elegir Double Chance siempre esta mal</strong> (estadisticamente). </p>
+
+          <p>En este caso, la sensacion de malestar es diferida: se da en el momento en que el usuario identifica esta situacion y piensa hacia atras todas las veces que gasto mal sus monedas. Esa sensacion puede ser recurrente y sostenida en el tiempo: cada vez que necesite usar monedas y tenga fondos insuficientes va a recordar su error inicial (como en la vida cuando tomamos una mala decision y luego nos reprochamos durante meses aunque no podamos cambiar el pasado).</p>
+        </div>
+      </section>
+
+      <!-- FALSE CHOICE: INEFFECTIVE CHOICE 1/3 -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>False choice: Ineffective Choice</h3>
+        <p class="smalltext">Mostrar al usuario lo que a priori parece una eleccion interesante, pero luego resulta completamente inefectiva, intrascendente o simplemente no gratificante.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-20-29.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-04-35.png">
+        <div class="img_cap">
+          <p style="margin-top: 0px;">Tina y Albert son los dos sospechosos "accidentales" de esta mecanica.</p>
+          <p>La palabra clave es "accidental", ya que Tina y Albert presentan un problema solo en una ocasion en particular: cuando el flow del gameplay es interrumpido por una respuesta incorrecta y el usuario pierde (se olvida) el ultimo estado del mapa.</p>
+          <p>Ya que el mapa es entonces la causa, veamos primero su caso puntual para luego regresar a Tina y Albert....</p>
+        </div>
+      </section>
+
+      <!-- NON RELIABILITY -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>Non-reliability</h3>
+        <p class="smalltext">Cuando le damos una herramienta al usuario con un fin determinado, y luego resulta que esa herramienta no logra satisfacer el rol prometido o solo lo logra en determinadas situaciones. Le damos una herramienta en la que no puede confiar.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-37-06.png">
+        <div class="img_cap wide">
+          <p style="margin-top: 0px;">El mapa en TCK introduce un cambio importante respecto a Preguntados: la idea de una posible estrategia.</p>
+          <p>Si bien la eleccion de caja y sus resultados siguen siendo casi exclusivamente una cuestion de RNG, el mapa pasa a ser ahora una representacion del estado de la partida y un recuento del ida y vuelta de ambos participantes.</p>
+          <p>Tina y Albert a su vez, representan para el jugador una oportunidad estrategica de dar un gran salto hacia adelante y acercarse a la victoria.</p>
+          <p>Dicho esto, sabemos que ante una respuesta incorrecta hay una interrupcion completa del flow de gameplay. Nuestro problema se evidencia en el retorno a la partida: el usuario no tiene forma de decodificar el estado actual en base al mapa, repasar los ultimos movimientos ni continuar su estrategia previa (a menos que recuerde de memoria los ultimos movimientos de ambos!).</p>
+          <p>El mapa como herramienta estrategica se convierte entonces en un factor en el que no se puede confiar.</p>
+          <p>Lo cual nos lleva nuevamente a Tina y Albert...</p>
+        </div>
+      </section>
+
+      <!-- FALSE CHOICE: INEFFECTIVE CHOICE 2/3 -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>False choice: Ineffective Choice</h3>
+        <p class="smalltext">Mostrar al usuario lo que a priori parece una eleccion interesante, pero luego resulta completamente inefectiva, intrascendente o simplemente no gratificante.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-20-29.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-20-46.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-21-03.png">
+        <div class="img_cap">
+          <p style="margin-top: 0px;">Veamos el rollercoaster emocional de este caso:</p>
+          <p>1. Seleccione una caja y abri a Tina, lo cual me pone contento: si tengo suerte (%50) y contesto bien tengo una corona!</p>
+          <p>2. Toco madera e invoco a la pachamama.</p>
+          <p>3. La suerte realmente no esta conmigo... Tome una mala decision y ahora me enfrento a Melissa. Intento sobrevivir pero en la primera pregunta me equivoco... Estoy enojado con mi desempeño y no tengo mas consuelo que esperar...</p>
+        </div>
+      </section>
+
+      <!-- FALSE CHOICE: INEFFECTIVE CHOICE 3/3 -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>False choice: Ineffective Choice</h3>
+        <p class="smalltext">Mostrar al usuario lo que a priori parece una eleccion interesante, pero luego resulta completamente inefectiva, intrascendente o simplemente no gratificante.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-22-31.png">
+        <div class="img_cap wide">
+          <p style="margin-top: 0px;">...dos dias mas tarde:</p>
+          <p>4. Es mi turno ! Hmmmm......??? Que paso aca? Recuerdo fugazmente haber visto a Tina la ultima vez que jugue. Conteste bien aquel entonces?? Era esta partida o me estoy confundiendo con otra? Era este mapa y es la Tina que estoy viendo, o quizas fue en la corona anterior y esta Tina la abrio mi adversario??</p>
+          <p>En definitiva, perdi (olvide) el estado actual de la partida y no tengo como recuperarlo.</p>
+          <p>Si habia interactuado con Tina o Albert, elegido la caja incorrecta, fallado y mi adversario a su vez fallo, ya no tengo forma de capitalizar sobre su error (no capitalizar el mio, para lo cual el tampoco tuvo informacion disponible !). Ya no recuerdo el insight (ventaja) que Tina/Albert me habian dado en primer lugar.</p>
+          <p>La sensacion es la de la oportunidad perdida, y esta acentuada por el enojo propio de a) equivocarse en varias oportunidas, b) olvidar informacion importante y c) la impotencia de no poder capitalizar sobre errores ajenos.</p>
+          <p>La eleccion que se me ofrecio hace dos dias (via Tina/Albert) no solo se ha vuelto completamente inefectiva, sino que incluso ha generado nuevas emociones negativas.</p>
+        </div>
+      </section>
+
+
+      <!-- FUN FAILS TO EXCEED ANTI FUN -->
+      <section>
+        <h5>Mecanicas Anti-Fun</h5>
+        <h3>Fun Fails to Exceed Anti-Fun</h3>
+        <p class="smalltext">Cuando la experiencia negativa generada por las acciones (unilaterales o no) del adversario es superior a la experiencia positiva genereda por las acciones propias.</p>
+
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-06-23.png">
+        <div class="img_cap wide">
+          <p style="margin-top: 0px;">Esta idea traza un paralelismo con el concepto de <a href="https://en.wikipedia.org/wiki/Loss_aversion">Loss Aversion</a>; el cual esta extensivamente estudidado en los campos de Economia, Psicologia, Teoria de la Decision y Teoria del Juego. El mismo dice que una persona que pierde 100$ va a perder mas satisfaccion que la que va a ganar una persona que gana 100$ inesperadamente. La mayoria de los estudios situan ese diferencial en 2x.</p>
+          <p>Si extrapolamos a terminos que nos competen: perder una corona genera un malestar 2x superior al bienestar generado por ganar una corona.</p>
+          <p>De todas formas, tanto en Preguntados como en TCK existe un factor atenuante a la hora de considerar la mecanica: las partidas son jugadas en forma asincronica, lo cual nos resguarda (como victimas) de tener que presenciar impotentes como nos quitan lo ganado. A veces incluso ni nos damos cuenta al regresar a una partida, que hemos perdido una corona (lo cual implica otro problema en cuanto a lo comunicacional, pero eso es otro tema).
+          <p>Realisticamente, y ya que el net value de esta mecanica es en teoria 2x negativo, no existe necesidad de incluir este tipo de situaciones en juegos cuyo core gameplay no gira en torno al concepto de <a href="https://en.wikipedia.org/wiki/Zero-sum_game">Zero-sum game</a> (ej: poker).</p>
+        </div>
+      </section>
+
+      <section>
+        <h1>Accionables</h1>
+      </section>
+
+
+      <section>
+        <h1>BI - Report</h1>
+        <h5>Analizando gameplay en TCK desde el punto de vista de las mecanicas "Anti-fun".</h5>
+        <p>Comentarios/sugerencias: santiago.boselli@etermax.com / bi@etermax.com
+      </section>
+
+<!--
+      <section>
+        <h5></h5>
+        <h1>Non-Reliability</h1>
+        <p>
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-36-24.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-36-37.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-36-48.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-36-56.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-37-06.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-37-43.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-37-57.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-38-09.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-38-19.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-39-25.png">
+        </p>
+      </section>
+
+      <section>
+        <h5></h5>
+        <h1>Non-Reliability</h1>
+        <p>
+        <img class="screenshot" src="img/Screenshot_2016-01-15-16-44-11.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-19-00.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-20-29.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-20-46.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-21-03.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-22-31.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-23-19.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-15-19-25-54.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-04-35.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-05-31.png">
+        </p>
+      </section>
+
+      <section>
+        <h5></h5>
+        <h1>Non-Reliability</h1>
+        <p>
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-04-35.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-05-31.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-06-23.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-07-42.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-08-27.png">
+        <img class="screenshot" src="img/Screenshot_2016-01-16-18-09-18.png">
+        </p>
+      </section> -->
+
 
       </div>
   </div>
