--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <section>
         <h5>Mecánicas Anti-Fun</h5>
         <h3>Fun Fails to Exceed Anti-Fun</h3>
-        <p class="smalltext">Cuando la experiencia negativa generada por las acciones (unilaterales o no) del adversario es superior a la experiencia positiva genereda por las acciones propias.</p>
+        <p class="smalltext">Cuando la experiencia negativa generada por las acciones (unilaterales o no) del adversario es superior a la experiencia positiva generada por las acciones propias.</p>
 
         <img class="screenshot" src="img/Screenshot_2016-01-16-18-06-23.png">
         <div class="img_cap wide">
@@ -261,7 +261,7 @@
           <div class="actions">
             <h5>Stephang</h5>
             <p>1. Stephang resulta en un cambio neto de +1 C. al jugador activo y -1 al pasivo. Otra forma de expresarlo, pero sin generar respuesta emocional negativa en la persona pasiva (e incapaz de actuar) es simplemente cambiar a: +2 coronas para el jugador activo. Esto también elimina un problema que no repasamos respecto a usar Stephang cuando el jugador opuesto tiene 0 coronas y no hay que robar.</p>
-            <p>2. Cambiar la mecánica a un modo "desafío" para darle oportunidad al adversario de defenderse: si contesto bien la/s pregunta de Stephang, ahora mi adversario debe hacer lo mismo o perder la corona. El robo de corona se efectua solo si el adversario falla en su oportunidad de defensa.</p>
+            <p>2. Cambiar la mecánica a un modo "desafío" para darle oportunidad al adversario de defenderse: si contesto bien la/s pregunta de Stephang, ahora mi adversario debe hacer lo mismo o perder la corona. El robo de corona se efectúa solo si el adversario falla en su oportunidad de defensa.</p>
           </div>
         </section>
       </section>
@@ -276,7 +276,6 @@
         <p>En la misma forma en que un libro bien escrito guiá al lector a través de una experiencia emocional premeditada, nosotros también debemos ser responsables de entender y guiar las respuestas emocionales inconscientes de nuestros jugadores. Esto a su vez, nos ayuda a garantizar o maximizar la efectividad de cada una de nuestras decisiones y acciones: deben cumplir el propósito para el que fueron creadas inicialmente, y cualquier efecto secundario negativo no deseado debe ser (idealmente) evaluado y depurado.</p>
         </div>
       </section>
-
 
       <section>
         <h1>BI - Report</h1>
